# orax-eye

./: LICENSE  README.md  pyproject.toml
scripts/: install.sh
src/orax_eye/: __init__.py  __main__.py  core.py  mcp_server.py
