[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orax-eye"
dynamic = ["version"]
description = "See and control any macOS app through the Accessibility API. The screen reader for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ORAX" },
]
keywords = [
    "accessibility", "macos", "automation", "mcp", "ai-agent",
    "computer-use", "screen-reader", "ui-automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Desktop Environment",
]
dependencies = [
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.0.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[project.urls]
Homepage = "https://github.com/oraxhq/orax-eye"
Repository = "https://github.com/oraxhq/orax-eye"
Issues = "https://github.com/oraxhq/orax-eye/issues"

[project.scripts]
orax-eye = "orax_eye.mcp_server:main"

[tool.hatch.version]
path = "src/orax_eye/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/orax_eye"]
